register new user endpoint
