# handler/endpoints.go
@@ -1,18 +1,38 @@
 package handler
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/labstack/echo/v4"
 )
 
-// This is just a test endpoint to get you started. Please delete this endpoint.
-// (GET /hello)
-func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
+func (s *Server) CreateUser(c echo.Context) error {
+	var payload generated.CreateUserRequest
+	if err := c.Bind(payload); err != nil {
+		return c.JSON(http.StatusBadRequest, generated.ErrorResponse{
+			Kind:    "BadRequest",
+			Message: "invalid json format",
+		})
+	}
 
-	var resp generated.HelloResponse
-	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
-	return ctx.JSON(http.StatusOK, resp)
+	uv := UserValidator{
+		FullName: payload.FullName,
+		Phone:    payload.Phone,
+		Password: payload.Password,
+	}
+	uv.Validate()
+	if uv.HasError() {
+		return c.JSON(http.StatusBadRequest, uv.UserError)
+	}
+
+	id, err := s.UserService.RegisterUser(c.Request().Context(), payload)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, generated.ErrorResponse{
+			Kind:    "BadRequest",
+			Message: err.Error(),
+		})
+	}
+
+	return c.JSON(http.StatusOK, generated.CreateUserResponse{Id: id})
 }
