# repository/implementations.go
@@ -2,10 +2,31 @@ package repository
 
 import "context"
 
-func (r *Repository) GetTestById(ctx context.Context, input GetTestByIdInput) (output GetTestByIdOutput, err error) {
-	err = r.Db.QueryRowContext(ctx, "SELECT name FROM test WHERE id = $1", input.Id).Scan(&output.Name)
+func (r *Repository) CreateUser(ctx context.Context, u *User) (int64, error) {
+	query := `
+		INSERT INTO users (full_name, phone, country_code, password, created_at, updated_at)
+		VALUES ($1, $2, $3, $4, $5, $6)
+		RETURNING id
+	`
+	tx, err := r.Db.Begin()
 	if err != nil {
-		return
+		return 0, err
 	}
-	return
+
+	err = tx.QueryRow(
+		query,
+		u.FullName,
+		u.Phone, u.CountryCode,
+		u.Password,
+		u.CreatedAt, u.UpdatedAt).Scan(&u.ID)
+	if err != nil {
+		tx.Rollback()
+		return 0, err
+	}
+
+	if err := tx.Commit(); err != nil {
+		return 0, err
+	}
+
+	return u.ID, nil
 }
